# PeaGenetic

./: CMakeLists.txt
resources/: test.tsp
src/: main.cpp
src/FileLoader/: FileLoader.cpp
src/GreedyAlg/: GreedyAlg.cpp  GreedyAlg.hpp
src/genetic/algorithm/: Analyser.cpp  Analyser.hpp
src/genetic/controller/: Main.cpp  Main.hpp
src/genetic/holder/: ResourceHolder.cpp  ResourceHolder.hpp
